--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="home_second">Home Second</string>
+    <string name="login">LOGIN</string>
+    <string name="email">email</string>
+    <string name="registrate_bby">registrate bby</string>
 </resources>
